# rag-engineering

./: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
apps/api/: Dockerfile  pyproject.toml
apps/api/src/api/: app.py
apps/api/src/api/core/: config.py
apps/chatbot_ui/: Dockerfile  pyproject.toml
apps/chatbot_ui/src/chatbot_ui/: app.py
apps/chatbot_ui/src/chatbot_ui/core/: config.py
notebooks/prerequisites/: 01-llm-apis.ipynb
src/: app.py
src/core/: config.py
