[project]
name = "chatbot-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mohamed Omar Cheikh", email = "mohamed.omarcheikh@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "streamlit>=1.58.0",
]

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
shared = { workspace = true }

[tool.uv_build.targets.wheel]
packages = ["api"]

[tool.uv_build.targets.sdist]
include = [
    "src/",
    "tests/",
    "README.md",
]
